Reformat receipts to use full width in the header and footer, to prevent text wrapping

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -54,6 +54,9 @@ width: 65%;
 p.footer {
 width: 65%;
 }
+p.longfooter {
+width: 100%;
+}
 
 /* ===================================
          General Stuff */
